Fixed 'overflow: hidden' from grid overlay.

--- a/theme/norgeskart/_pure_style.scss
+++ b/theme/norgeskart/_pure_style.scss
@@ -4580,3 +4580,6 @@ input:disabled {
     visibility: hidden;
   }
 }
+.svg-visible svg {
+    overflow: visible;
+}
